--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <h3 class="subtitulo-secao">Contato:</h3>
 <ul>
 <li>Rio de Janeiro, Brasil</li>
-<li>Email: pedrohenriquedasilvacontato@gmail.com</li>
-<li>Telefone: (21) 98310-1108</li>
+<li class="email">Email: <a href="emailto:pedrohenriquedasilvacontato@gmail.com">pedrohenriquedasilvacontato@gmail.com</a></li>
+<li>Telefone: <a href="wa.me/5521983101108" target="_blank">(21) 98310-1108</a></li>
 </ul>
 </div>
 <hr>
